[project]
name = "integration-tests"
version = "0.1.0"
description = "Integration tests for the Exosphere API server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo>=4.14.1",
    "python-dotenv>=1.1.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.11",
    "exospherehost",
    "state-manager",
]

[dependency-groups]
dev = []

[tool.uv.sources]
exospherehost = { path = "../python-sdk" }
state-manager = { path = "../state-manager" }
