[project]
name = "integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio-mqtt>=0.16.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pymongo>=4.14.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "redis>=6.4.0",
]
